@@ -22,6 +22,8 @@ WC3 = WooCommerce 3 (WordPress)
 Bugs:
 - ALL: only use the setting that defines EU vat classes when the shop might sell
   articles subject to EU vat.
+- ALL: looked up vat rate meta data may be an empty array: use empty() instead
+  of isset().
 - ALL: allow, recognise and store empty multi-select fields on the config forms.
 - ALL: notice Undefined index nature in completor.php on line 336.
 - OC2/OC3: mail did not use the correct property names for the smtp settings.
